// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`__clone__ instead of __html__ 1`] = `
"class MyView extends View {}

var __buildUtils__ = MyView.prototype.buildUtils;
MyView.prototype.__ht = '<div></div>';
MyView.prototype.__wc = [];
MyView.prototype.queryCollection = __buildUtils__.getQueryCollection({});

MyView.prototype.__bv = function (view, prototype) {
  view.__bd(prototype, true);

  view.dom = {};
};

MyView.prototype.__cn = undefined;"
`;

exports[`Empty div created correct HTML 1`] = `
"class MyView extends View {}

var __buildUtils__ = MyView.prototype.buildUtils;
MyView.prototype.__ht = '<div></div>';
MyView.prototype.__wc = [];
MyView.prototype.queryCollection = __buildUtils__.getQueryCollection({});

MyView.prototype.__bv = function (view, prototype) {
  view.__bd(prototype, false);

  view.dom = {};
};"
`;
